# Askio

./: LICENSE  README.md  docker-compose.yml
api/: README.md  config.py  main.py  pyproject.toml
api/src/: core.py
api/src/models/: __init__.py  message.py  response.py
api/src/views/: __init__.py  message.py
chat/: Dockerfile  README.md  config.py  main.py  pyproject.toml
chat/src/: __init__.py  chat.py  client.py
client/: README.md  config.py  main.py  pyproject.toml
client/src/: api.py  chat.py  session.py
db/: README.md  broker.py  config.py  main.py  pyproject.toml
db/src/: __init__.py  crud.py  database.py
db/src/models/: __init__.py  query.py  session.py
