[project]
name = "chat"
version = "0.1.0"
description = "The Chat handles AI-powered chat responses using an event-driven, fully asynchronous architecture."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faststream[rabbit]>=0.5.48",
    "ollama>=0.5.1",
    "pydantic-settings>=2.10.1",
]
